--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,10 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "ext-json": "*",
         "doctrine/dbal": "^2.7",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0"
     },
@@ -20,7 +22,7 @@
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
         "phpunit/phpunit": "^7.0"
-    },
+    },e
     "autoload": {
         "classmap": [
             "database/seeds",
